# blitzen

./: .gitignore  AGENTS.md  LICENSE  README.md  claude_code_handoff.md  led_control_design.md  pyproject.toml
firmware/m0/: README.md  config.h.example  flash.sh  gen_config.py  m0_display_client.ino  secrets.example.yaml
host/: __init__.py  cli.py  devices.example.toml  encoder.py  frame.py  orchestrator.py  protocol.py  targets.py
host/patterns/: __init__.py  asset.py  base.py  procedural.py
host/tests/: _fakes.py  conftest.py  test_cli.py  test_ddp.py  test_ddp_integration.py  test_encoder.py  test_frame.py  test_m0_control.py  test_orchestrator.py  test_patterns.py  test_seam.py  test_web_demo.py  test_wled_control.py
host/tools/: __init__.py  calibrate_camera.py  ddp_sink.py  find_wled.py  render_mapped.py  web_demo.py
host/transports/: __init__.py  base.py  ddp.py  m0_control.py  wled_control.py
