# Copyright 2026 The Blitzen Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "blitzen"
version = "0.1.0"
description = "Host-side control for heterogeneous networked LED displays (DDP live, M0 slot ring, WLED presets)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "The Blitzen Authors" }]
dependencies = [
    "pillow>=10.0",
]

[project.scripts]
blitzen = "host.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

# Explicit package list so setuptools flat-layout discovery does not trip over the
# non-Python `firmware/` sibling ("Multiple top-level packages discovered").
[tool.setuptools]
packages = ["host", "host.patterns", "host.transports", "host.tools"]

[tool.pytest.ini_options]
testpaths = ["host/tests"]
